--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bai Tap</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bai Tap</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+	href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap"
+	rel="stylesheet">
 </head>
+<style>
+	*, body {
+		font-family: 'Inter', sans-serif;
+	}
+</style>
 <frameset rows="80, *, 70" border="1">
-    <frame name="header" src="header.html">
-    <frameset cols="200, *, 100">
-        <frame name="left" src="left.html">
-        <frame name="content" src="content.html">
-        <frame name="right" src="right.html">
-    </frameset>
-    <frame name="footer" src="footer.html">
+	<frame name="header" src="header.html">
+	<frameset cols="200, *, 100">
+		<frame name="left" src="left.jsp">
+		<frame name="content" src="content.html">
+		<frame name="right" src="right.html">
+	</frameset>
+	<frame name="footer" src="footer.html">
 </frameset>
 </html>
